refactor: toList() 사용